<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:outlineAmbientShadowColor="@color/black"
    android:layout_margin="8dp"
    app:cardElevation="32dp"
    android:elevation="20dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tvTimeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_30_mins"
                android:gravity="center"
                android:textStyle="bold"
                android:drawablePadding="6dp"
                android:paddingEnd="16dp"
                android:paddingStart="6dp"
                android:padding="3dp"
                android:textColor="@color/white"
                android:background="@drawable/rounded_textview_bg"
                app:drawableLeftCompat="@drawable/time_img"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/order_id"
                android:textColor="#8C8C8C"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orderID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/me20002977"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvAllDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_Details"
                android:focusable="true"
                android:clickable="true"
                android:textColor="@color/orange"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:drawablePadding="10dp"
                android:text="@string/delivery_status"
                android:textColor="#8C8C8C"
                android:textSize="16sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/time_img"
                app:drawableTint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/driver_incoming"
                android:textColor="#1A766C"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>