<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mediumOrange"
    tools:context=".HomePageFragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:background="@drawable/rounded_top_corner_card_view"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="15dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="30000dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/HelloUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:padding="4dp"
                    android:text="@string/helload"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText,TextContrastCheck" />

                <TextView
                    android:id="@+id/tvProfile1"
                    android:layout_width="195dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:elegantTextHeight="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/Your_Profilead"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/usericon"
                    app:drawableTint="@color/mediumOrange"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvRatings"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:elegantTextHeight="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/Your_Ratingsad"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ratingsicon"
                    app:drawableTint="@color/mediumOrange"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvOrders"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:elegantTextHeight="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/Your_Ordersad"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/ordericon"
                    app:drawableTint="@color/mediumOrange"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:elegantTextHeight="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/Addressad"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/locationicon"
                    app:drawableTint="@color/mediumOrange"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvPayment"
                    android:layout_width="245dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="false"
                    android:elegantTextHeight="true"
                    android:focusable="false"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/Payment_Historyad"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/walleticon"
                    app:drawableTint="@color/mediumOrange"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvAboutUs"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:elegantTextHeight="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/About_usad"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/infoicon"
                    app:drawableTint="@color/mediumOrange"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvFeedback"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:elegantTextHeight="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/Send_Feedbackad"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/feedbackicon"
                    app:drawableTint="@color/mediumOrange"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvSettings"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:elegantTextHeight="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/Settingsad"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/settingsicon"
                    app:drawableTint="@color/mediumOrange"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tvLogOut"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/Log_Outad"
                    android:textSize="16sp"
                    app:drawableStartCompat="@drawable/logout_icon"
                    app:drawableTint="@color/mediumOrange"
                    tools:ignore="HardcodedText" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</FrameLayout>